--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,12 +3,14 @@
 .search-form_block{
     position: fixed;
     background-color: rgb(30, 30, 169);
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
    width: 100%;
    height: 50px;
 }
 .search-form-txt{
     border: none;
+    padding: 10px;
 }
 .search-form{
     display: flex;
@@ -16,6 +18,7 @@
 }
 .btn{
     border: none;
+    padding: 10px;
 }
 .search-img{
     background-color: none;
@@ -27,7 +30,7 @@
 }
 
 .info-item {
-    margin-bottom: 5px;
+
     display: flex;
     flex-direction: column;
 }
@@ -44,4 +47,28 @@
 }
 .loadBtn{
 text-align: center;
+}
+.hidden{
+    display: none;
+}
+.load-more{
+font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    background: #1e90ff;
+    width: 150px;
+    padding: 10px;
+    text-decoration: none;
+    color: #ffff;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: none;
+}
+.load-more:hover, .load-more:focus{
+background: #063360;
+}
+.photo-card{
+    display: block;
+    text-align: center;
 }
